--- a/templates/zerver/app/invite_user.html
+++ b/templates/zerver/app/invite_user.html
@@ -57,6 +57,7 @@
                 <button class="button exit small rounded" data-dismiss="modal">{{ _('Cancel') }}</button>
                 <button id="submit-invitation" class="button small rounded sea-green" type="button"
                   data-loading-text="{{ _('Inviting...') }}">{{ _('Invite') }}</button>
+                <input type="hidden" id="copy_link" value="Copy link">
                 <div class="alert" id="multiuse_invite_status"></div>
             </div>
         </form>
