--- a/templates/zerver/desktop_login.html
+++ b/templates/zerver/desktop_login.html
@@ -11,6 +11,7 @@
 
             <form id="form" action="blob:">
                 <span class="input-box">
+                    <label for="token">Token</label>
                     <input id="token" placeholder="{% trans %}Paste token here{% endtrans %}" type="text"/>
                 </span>
                 <button id="submit" disabled>{% trans %}Finish{% endtrans %}</button>
