--- a/templates/zerver/desktop_redirect.html
+++ b/templates/zerver/desktop_redirect.html
@@ -8,6 +8,7 @@
         <p class="copy-token-info">{% trans %}Copy this login token and return to your Zulip app to finish logging in:{% endtrans %}</p>
         <p>
             <span class="input-box">
+                <label for="desktop-data">Token</label>
                 <input id="desktop-data" value="{{ desktop_data }}" type="text" readonly />
             </span>
             <button id="copy" tabindex="0" data-clipboard-target="#desktop-data">{% trans %}Copy{% endtrans %}</button>
