right_sidebar: Add JS tooltip to keyboard icon to prevent flickering
fixed capitalization according to the guidelines

--- a/templates/zerver/app/right_sidebar.html
+++ b/templates/zerver/app/right_sidebar.html
@@ -20,7 +20,7 @@
         <a id="invite-user-link" href="#invite"><i class="fa fa-plus-circle" aria-hidden="true"></i>{{ _('Invite more users') }}</a>
         {% endif %}
         <a id="sidebar-keyboard-shortcuts" data-overlay-trigger="keyboard-shortcuts">
-            <i class="fa fa-keyboard-o fa-2x" id="keyboard-icon" data-html="true" data-toggle="tooltip" title="{{ _('Keyboard shortcuts') }} <span class='hotkey-hint'>(?)</span>"></i>
+            <i class="fa fa-keyboard-o fa-2x" id="keyboard-icon"></i>
         </a>
     </div>
 </div>
