--- a/static/styles/informational_overlays.css
+++ b/static/styles/informational_overlays.css
@@ -113,7 +113,7 @@
         font-weight: bold;
 
         :not(kbd) {
-            font-size: 14px;
+            font-size: 0.875rem;
         }
     }
 }
