--- a/static/styles/portico/archive.css
+++ b/static/styles/portico/archive.css
@@ -1,7 +1,7 @@
 body {
     font-family: "Source Sans Pro", "Helvetica Neue", Helvetica, Arial,
         sans-serif;
-    font-size: 14px;
+    font-size: 0.875rem;
 }
 
 .header {
