--- a/static/styles/portico/billing.css
+++ b/static/styles/portico/billing.css
@@ -164,7 +164,7 @@
     }
 
     .invoice-button {
-        font-size: 17px;
+        font-size: 1.0625rem;
         font-weight: 700 !important;
     }
 
