--- a/static/styles/message_edit_history.css
+++ b/static/styles/message_edit_history.css
@@ -9,7 +9,7 @@
 
     .author_details {
         display: block;
-        font-size: 12px;
+        font-size: 0.75rem;
         padding: 1px;
         text-align: right;
     }
