--- a/static/styles/reactions.css
+++ b/static/styles/reactions.css
@@ -187,7 +187,7 @@
                 width: 25px;
                 height: 25px;
                 text-align: center;
-                font-size: 16px;
+                font-size: 1rem;
                 cursor: pointer;
                 /* Flex needed here to work around #7511 (90% zoom issues in firefox) */
                 flex-grow: 1;
@@ -215,7 +215,7 @@
             .emoji-popover-results-heading {
                 font-weight: 600;
                 padding: 5px 3px 3px 5px;
-                font-size: 17px;
+                font-size: 1.0625rem;
             }
         }
 
@@ -276,7 +276,7 @@
             position: relative;
             top: 12px;
             margin-left: 50px;
-            font-size: 16px;
+            font-size: 1rem;
             font-weight: 600;
             white-space: nowrap;
             text-overflow: ellipsis;
