--- a/static/styles/recent_topics.css
+++ b/static/styles/recent_topics.css
@@ -154,7 +154,7 @@
             color: hsl(0, 0%, 100%);
             height: 16px;
             line-height: 16px;
-            font-size: 12px;
+            font-size: 0.75rem;
             font-weight: 400;
             letter-spacing: 0.6px;
             border-radius: 4px;
