--- a/static/third/bootstrap-tooltip/tooltip.css
+++ b/static/third/bootstrap-tooltip/tooltip.css
@@ -4,7 +4,7 @@
     z-index: 1030;
     display: block;
     padding: 5px;
-    font-size: 11px;
+    font-size: 0.6875rem;
     opacity: 0;
     filter: alpha(opacity=0);
     visibility: visible;
@@ -107,7 +107,7 @@
 .popover-title {
   padding: 8px 14px;
   margin: 0;
-  font-size: 14px;
+  font-size: 0.875rem;
   font-weight: normal;
   line-height: 18px;
   background-color: #f7f7f7;
