--- a/templates/zerver/emails/email.css
+++ b/templates/zerver/emails/email.css
@@ -13,7 +13,7 @@ img {
 body {
     background-color: #f5f9f8;
     font-family: sans-serif;
-    font-size: 14px;
+    font-size: 0.875rem;
     line-height: 1.4;
     margin: 0;
     padding: 0;
@@ -30,7 +30,7 @@ table {
 
 table td {
     font-family: sans-serif;
-    font-size: 14px;
+    font-size: 0.875rem;
     vertical-align: top;
 }
 
@@ -78,7 +78,7 @@ table td {
 .footer span,
 .footer a {
     color: #999;
-    font-size: 12px;
+    font-size: 0.75rem;
     text-align: center;
 }
 
@@ -99,7 +99,7 @@ h4 {
 }
 
 h1 {
-    font-size: 35px;
+    font-size: 2.1875rem;
     font-weight: 300;
     text-align: center;
     text-transform: capitalize;
@@ -109,7 +109,7 @@ p,
 ul,
 ol {
     font-family: sans-serif;
-    font-size: 14px;
+    font-size: 0.875rem;
     font-weight: normal;
     margin: 10px 0;
 }
@@ -142,7 +142,7 @@ a:hover {
     border: 1px solid #80d1ba;
     background-color: #80d1ba;
     border-radius: 4px;
-    font-size: 16px;
+    font-size: 1rem;
     outline: none;
     color: #fff;
     font-family: sans-serif;
@@ -177,7 +177,7 @@ a.button:hover {
 
 #private-messages {
     width: 600px;
-    font-size: 12px;
+    font-size: 0.75rem;
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
@@ -213,7 +213,7 @@ a.button:hover {
 
 .messages {
     width: 600px;
-    font-size: 12px;
+    font-size: 0.75rem;
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     overflow-y: auto;
 }
